Fixes an issue reported by @solo-1234 where full recalcs started from the Recalculate Rollups tab sometimes pulled back too many parent records, which could lead to inadvertant resets

--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -2303,7 +2303,9 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
       wrappedMeta.metadata,
       parentType,
       parentQuery,
-      wrappedMeta.recordIds,
+      // here we duplicate the recordId list because it's also passed to the fullRecalc instance initialized below and
+      // "bad things" can happen if both collections have the same reference
+      new Set<String>(wrappedMeta.recordIds),
       invokePoint
     );
     Boolean shouldQueue =
