Fixes an issue reported by @solo-1234 where rolling up 1 child to multiple parents where the parent types keep alternating lead to rollup fields accidentally being cleared

--- a/extra-tests/classes/RollupFlowBulkProcessorTests.cls
+++ b/extra-tests/classes/RollupFlowBulkProcessorTests.cls
@@ -370,6 +370,7 @@ private class RollupFlowBulkProcessorTests {
         RollupFieldOnLookupObject__c = 'AboutMe'
       )
     };
+    Rollup.onlyUseMockMetadata = true;
     RollupFlowBulkProcessor.FlowInput input = new RollupFlowBulkProcessor.FlowInput();
     input.recordsToRollup = new List<SObject>{ new Opportunity(Amount = 5, Id = RollupTestUtils.createId(Opportunity.SObjectType)) };
     input.rollupContext = 'INSERT';
